[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrpc"
version = "0.1.0"
dependencies = [
  "websockets",
]
requires-python = ">=3.8"
authors = [
  {name = "Sam Vervaeck", email = "samvv@pm.me"},
]
maintainers = [
  {name = "Sam Vervaeck", email = "samvv@pm.me"}
]
description = "Build RPC applications fast and easily"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = [
  "rpc",
  "api",
  "application",
  "websocket",
  "http",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/samvv/fastrpc"
Repository = "https://github.com/samvv/fastrpc.git"
"Bug Tracker" = "https://github.com/samvv/fastrpc/issues"

[project.scripts]
fastrpc = "fastrpc:main"

